# demo-swarm-swarm

./: .cspell.json  .gitattributes  .gitignore  .markdownlint.json  .markdownlintignore  ARCHITECTURE.md  CHANGELOG.md  CHEATSHEET.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CRITIQUE.md  DEMO_RUN.md  INDEX_REVIEW_REPORT.md  README.md  REPO_MAP.md  ROADMAP.md  SECURITY.md  START-HERE-accuracy-report.md  SUPPORT.md  demo-swarm.config.template.json  doc_critique.md  skills-documentation-audit.md
tools/demoswarm-pack-check/: Cargo.toml  LICENSE-APACHE  README.md  test_2024  test_changes_summary.md  test_summary.md
tools/demoswarm-pack-check/coverage/: tarpaulin-report.html
tools/demoswarm-pack-check/src/: cli.rs  contracts.rs  ctx.rs  inventory.rs  lib.rs  main.rs  reporter.rs  runner.rs  util.rs
tools/demoswarm-pack-check/src/checks/: contracts.rs  control_plane.rs  drift.rs  flow.rs  mod.rs  structure.rs  wisdom.rs
tools/demoswarm-pack-check/tests/: check_integration_test.rs
tools/demoswarm-pack-check/tests/fixtures/: README.md  agent_no_demoswarm.md  agent_skill_tool_only.md  agent_with_skills.md  agent_without_skills.md  build_receipt_invalid.json  build_receipt_missing_run_id.json  build_receipt_valid.json  flow_command_clean.md  flow_command_prose_count.md  flow_command_violation.md  (+5 more)
tools/demoswarm-runs-tools/: Cargo.toml  README.md
tools/demoswarm-runs-tools/src/: main.rs  output.rs  walk.rs
tools/demoswarm-runs-tools/test_tmp/: findings.json  index.json  test.txt
tools/demoswarm-runs-tools/tests/: cli_contract.rs  secrets_test.rs
(+565 files in other folders)
