[package]
name = "demoswarm-pack-check"
version = "1.0.1"
edition = "2024"
rust-version = "1.89"
description = "Validator for DemoSwarm .claude packs (structural + contract consistency)."
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["claude", "agents", "workflow", "lint", "sdlc"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pack-check"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
walkdir = "2.5.0"
